Fix width problem on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,12 @@ main {
     width: 700px;
 }
 
+@media (max-width: 700px) {
+  main {
+    width: inherit;
+  }
+}
+
 main > p {
     margin-bottom: 25px;
 }
